# minecrisis

./: CMakeLists.txt  COPYRIGHT  Makefile  Makefile~  MineCrisis.cbp  MineCrisis.depend  MineCrisis.layout  MineCrisis.workspace  MineCrisisWorldGenerator.cbp  MineCrisisWorldGenerator.depend  MineCrisisWorldGenerator.layout  README  TODO  create_world.sh
cmake/: FindOggVorbis.cmake
data/: numbers.txt  ship.ase  ship.bounds
src/: ase_importer.c  ase_importer.h  bounding_boxes.c  bounding_boxes.h  consts.h  crc32.c  crc32.h  draw.c  draw.h  explosion.c  explosion.h  geom.c  geom.h  mine_crisis.c  mine_crisis.h  music.c  music.h  openal.h  opengl.h  random.c  random.h  resources.c  resources.h  sound.c  sound.h  texture.c  texture.h  utils.c  utils.h  world.c  world.h  world_gen.c
worlds/: world.txt
xcode/MineCrisis/: ._build
xcode/MineCrisis/MineCrisis/: MineCrisis-Info.plist
xcode/MineCrisis/MineCrisis.xcodeproj/: project.pbxproj
xcode/MineCrisis/MineCrisis.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/MineCrisis/MineCrisis.xcodeproj/project.xcworkspace/xcuserdata/giacomo.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/MineCrisis/MineCrisis.xcodeproj/xcuserdata/giacomo.xcuserdatad/xcschemes/: MineCrisis.xcscheme  xcschememanagement.plist
xcode/MineCrisis/MineCrisis/Frameworks/Ogg.framework/Versions/A/: Ogg
